submission of Data cleaning and EDA

--- a/3_2_EDA_Feature_Engineering.ipynb
+++ b/3_2_EDA_Feature_Engineering.ipynb
@@ -90,6 +90,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfbeb6ff",
+   "metadata": {},
+   "source": [
+    "#### Read and Inspect .pkl data files from notebook 3_1_data_wrangling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "885a983e",
@@ -486,30 +494,6 @@
    "source": [
     "sp_clean_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e900306",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "433911db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4d89320",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1310,7 +1294,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_94761/1835776494.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_17066/1835776494.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1522,20 +1506,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f3bf145",
+   "cell_type": "markdown",
+   "id": "61c94d8e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Export Files"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "e802ae43",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "speech_date_df.to_pickle('data_intermediate/speech_date_df.pkl')\n",
+    "roll_df.to_pickle('data_intermediate/rolling_av_df.pkl')\n",
+    "combined_df.to_pickle('data_intermediate/combined_df.pkl')\n",
+    "master_df.to_pickle('data_intermediate/master_df_2.pkl')"
+   ]
   },
   {
    "cell_type": "code",
@@ -1544,25 +1533,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "46e23cf7",
-   "metadata": {},
-   "source": [
-    "NLTK tutorial notes\n",
-    "- nltk.pos_tag(tokens) -> adds part of speech tags to each token\n",
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4258d49",
-   "metadata": {},
-   "source": [
-    "Ideas\n",
-    "- write sliding window-ish function to pull all data from stonks following each of powells speeches to look at histograms, boxplots, etc. for totals after speeches vs entire time span aggregated"
-   ]
   }
  ],
  "metadata": {
