for 3_3_modeling submission

--- a/3_1_data_wrangling.ipynb
+++ b/3_1_data_wrangling.ipynb
@@ -5,7 +5,7 @@
    "id": "25df98cb",
    "metadata": {},
    "source": [
-    "# Data Wrangling"
+    "# ntbk 1 - Data Wrangling"
    ]
   },
   {
@@ -1287,7 +1287,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1351ddf50>"
+       "<matplotlib.legend.Legend at 0x120ebe450>"
       ]
      },
      "execution_count": 15,
@@ -1401,13 +1401,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_80463/516535004.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_64668/516535004.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  sp_2021_plus['year'] = sp_2021_plus.index.year\n",
-      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_80463/516535004.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_64668/516535004.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1766,7 +1766,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_80463/3133997625.py:11: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_64668/3133997625.py:11: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  master_df = pd.concat([master_df,entry], ignore_index=True)\n"
      ]
     }
@@ -2104,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "e0484bd0",
    "metadata": {},
    "outputs": [],
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "b09599e9",
    "metadata": {},
    "outputs": [],
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "99d00b9a",
    "metadata": {},
    "outputs": [],
