upload model metrics and sync notebooks

--- a/3_1_data_wrangling.ipynb
+++ b/3_1_data_wrangling.ipynb
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "3a690765",
    "metadata": {
     "scrolled": false
@@ -1287,10 +1287,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x14a864590>"
+       "<matplotlib.legend.Legend at 0x12de91190>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1401,13 +1401,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_92844/516535004.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_99785/516535004.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  sp_2021_plus['year'] = sp_2021_plus.index.year\n",
-      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_92844/516535004.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_99785/516535004.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1763,7 +1763,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_92844/3133997625.py:11: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_99785/3133997625.py:11: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  master_df = pd.concat([master_df,entry], ignore_index=True)\n"
      ]
     }
@@ -2102,7 +2102,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6ca037da",
+   "id": "55af76a7",
    "metadata": {},
    "outputs": [
     {
