--- a/3_2_EDA_Feature_Engineering.ipynb
+++ b/3_2_EDA_Feature_Engineering.ipynb
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "daacacbb",
    "metadata": {},
    "outputs": [
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf5ad41",
+   "id": "379996e2",
    "metadata": {},
    "source": [
     "(remake plot with report-friendly formatting)"
@@ -1344,17 +1344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "eb91af87",
+   "execution_count": 25,
+   "id": "b8d6d3f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x130467ed0>"
+       "<matplotlib.legend.Legend at 0x145526090>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "faf28d32",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1427,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_89330/1835776494.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/_w/xxwqncbj69xfsg6qtjh7f1640000gn/T/ipykernel_99798/1835776494.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "c8161cfc",
    "metadata": {
     "scrolled": true
@@ -1590,7 +1590,7 @@
        "2023-09-28        4319.634277             43.058524  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "b9dbcf49",
    "metadata": {
     "scrolled": false
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "e802ae43",
    "metadata": {},
    "outputs": [],
